// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should only show one dealer card on secondShow is false 1`] = `
<div
  className="bg-white px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2 "
>
  <div
    className="mx-auto "
  >
    <div
      className="flex flex-col w-full"
    >
      <h1
        className="text-4xl text-rose-500"
      >
        K
      </h1>
      <h1
        className="text-4xl text-rose-500"
      >
        K
      </h1>
    </div>
    <div
      className="flex justify-center"
    >
      <h1
        className="text-7xl text-rose-500"
      >
        K
      </h1>
    </div>
    <div
      className="flex flex-col w-full items-end"
    >
      <h1
        className="text-4xl text-rose-500"
      >
        K
      </h1>
      <h1
        className="text-4xl text-rose-500"
      >
        K
      </h1>
    </div>
  </div>
</div>
`;

exports[`should render 1`] = `
<div
  className="w-screen h-screen flex flex-col items-center bg-slate-700"
>
  <div
    className="flex flex-col justify-evenly h-full max-w-7xl"
  >
    <div
      className="flex justify-center"
    >
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
    </div>
    <div
      className="flex items-center justify-center"
    >
      <div
        className="flex flex-col"
      >
        <div
          className="text-center w-full mb-2"
        >
          <h1
            className="text-white text-2xl"
          >
            DEAL CARDS
          </h1>
        </div>
        <div
          className="flex justify-between"
        >
          <button
            className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
            disabled={false}
            onClick={[Function]}
          >
            DEAL
          </button>
          <button
            className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
            disabled={true}
            onClick={[Function]}
          >
            HIT
          </button>
          <button
            className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
            disabled={true}
            onClick={[Function]}
          >
            DOUBLE DOWN
          </button>
          <button
            className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
            disabled={true}
            onClick={[Function]}
          >
            STAND
          </button>
        </div>
        <div
          className="flex justify-evenly bg-gray-200 items-center"
        >
          <div
            className="flex text-center flex-col"
          >
            <h1
              className="text-gray-700 text-3xl font-semibold"
            >
              BET
            </h1>
            <h1
              className="text-gray-700 text-xl font-semibold"
            >
              $
              0
            </h1>
          </div>
          <div
            className="flex justify-center py-4 mt-2 px-2"
          >
            <img
              alt="Chip 5 value"
              className="ml-4 mr-4 w-16 h-16 cursor-pointer"
              onClick={[Function]}
              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-5.png"
            />
            <img
              alt="Chip 10 value"
              className="ml-4 mr-4 w-16 h-16 cursor-pointer"
              onClick={[Function]}
              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-7.png"
            />
            <img
              alt="Chip 15 value"
              className="ml-4 mr-4 w-16 h-16 cursor-pointer"
              onClick={[Function]}
              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-4.png"
            />
            <img
              alt="Chip 50 value"
              className="ml-4 mr-4 w-16 h-16 cursor-pointer"
              onClick={[Function]}
              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-3.png"
            />
          </div>
          <div
            className="flex text-center flex-col"
          >
            <h1
              className="text-gray-700 text-3xl font-semibold"
            >
              CHIPS
            </h1>
            <h1
              className="text-gray-700 text-xl font-semibold"
            >
              $
              1000
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex justify-center"
    >
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
      <div
        className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
      />
    </div>
  </div>
</div>
`;

exports[`should render all house cards on secondShow 1`] = `
Array [
  <div
    className="bg-white px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2 "
  >
    <div
      className="mx-auto "
    >
      <div
        className="flex flex-col w-full"
      >
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl undefined"
        >
          K
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
      </div>
    </div>
  </div>,
  <div
    className="bg-white px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2 "
  >
    <div
      className="mx-auto "
    >
      <div
        className="flex flex-col w-full"
      >
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl undefined"
        >
          K
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
        <h1
          className="text-4xl undefined"
        >
          K
        </h1>
      </div>
    </div>
  </div>,
]
`;

exports[`should render player cards 1`] = `
Array [
  <div
    className="bg-white px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2 "
  >
    <div
      className="mx-auto "
    >
      <div
        className="flex flex-col w-full"
      >
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl text-rose-500"
        >
          K
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
      </div>
    </div>
  </div>,
  <div
    className="bg-white px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2 "
  >
    <div
      className="mx-auto "
    >
      <div
        className="flex flex-col w-full"
      >
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl text-rose-500"
        >
          K
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
        <h1
          className="text-4xl text-rose-500"
        >
          K
        </h1>
      </div>
    </div>
  </div>,
  <div
    className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
  />,
  <div
    className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
  />,
  <div
    className="border-2 border-gray-800 px-3 shadow-xl ring-1 ring-gray-900/5 w-40 h-60 m-2"
  />,
]
`;
